# llama-finetune

./: .gitignore  Dockerfile  cli_chatbot.py  custom_dataset.py  finetuning.py  pyproject.toml
configs/: datasets.py  training.py
data/preprocessing/: preprocess.py
data/preprocessing/processed_messages/train/: example_train_chats.csv
data/preprocessing/processed_messages/validation/: example_validation_chats.csv
data/preprocessing/raw_messages/validation/: example.txt
datasets/: custom_dataset.py
utils/: __init__.py
