[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "llama-finetune"
version = "0.0.1"
authors = [
  { name="Rudy Thurston", email="rudylthurston@gmail.com" },
]
description = "This repository lets you create an chatbot clone of yourself, using your messages as training data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
vllm = ["vllm"]
tests = ["pytest-mock"]
auditnlg = ["auditnlg"]

[project.urls]
"Homepage" = "https://github.com/rlthurst/llama-finetune"
"Bug Tracker" = "https://github.com/rlthurst/llama-finetune"

[tool.hatch.build]
exclude = [
  "dist/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llama_recipes"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.pytest.ini_options]
markers = [
    "skip_missing_tokenizer: skip tests when we can not access meta-llama/Llama-2-7b-hf on huggingface hub (Log in with `huggingface-cli login` to unskip).",
]